--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ add_custom_target(shaders_copy
         COMMENT "Copying Lysa shaders"
         VERBATIM
 )
+add_dependencies(shaders_copy ${LYSA_TARGET})
 
 #######################################################
 # Common files
@@ -87,7 +88,7 @@ function(build_target TARGET_NAME SRCS MODULES)
     compile_options(${TARGET_NAME})
     target_include_directories(${TARGET_NAME} PUBLIC ${INCLUDE_DIR} ${LYSA_INCLUDE_DIR})
     target_link_libraries(${TARGET_NAME} ${LYSA_TARGET} std-cxx-modules)
-    add_dependencies(${TARGET_NAME} ${LYSA_TARGET} shaders_copy)
+    add_dependencies(${TARGET_NAME} shaders_copy)
     if(WIN32)
         target_precompile_headers(${TARGET_NAME} PRIVATE
                 "<windows.h>"
