--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,8 +86,8 @@ function(build_target TARGET_NAME SRCS MODULES)
             ${MODULES}
     )
     compile_options(${TARGET_NAME})
-    target_include_directories(${TARGET_NAME} PUBLIC ${INCLUDE_DIR} ${LYSA_INCLUDE_DIR})
-    target_link_libraries(${TARGET_NAME} ${LYSA_TARGET} std-cxx-modules)
+    target_include_directories(${TARGET_NAME} PUBLIC ${INCLUDE_DIR} ${LYSA_INCLUDE_DIR} ${xxhash_SOURCE_DIR})
+    target_link_libraries(${TARGET_NAME} ${LYSA_TARGET} std-cxx-modules xxhash)
     add_dependencies(${TARGET_NAME} shaders_copy)
     if(WIN32)
         target_precompile_headers(${TARGET_NAME} PRIVATE
