--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,7 @@ endfunction()
 set(MY_TARGET_SRC
         ${SRC_DIR}/MyApp.cpp
         ${SRC_DIR}/scenes/AddRemoveNode.cpp
+        ${SRC_DIR}/scenes/BaseScene.cpp
         ${SRC_DIR}/scenes/TrianglesScene.cpp)
 set(MY_TARGET_MODULES
         ${SRC_DIR}/scenes/AddRemoveNode.ixx
