Trying agility SDK

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,18 @@ add_custom_target(shaders_copy
 add_dependencies(shaders_copy ${LYSA_TARGET} lysa_shaders)
 
 #######################################################
+if (DIRECTX_BACKEND)
+    set(AGILITYSDK_TARGET_BIN_DIR  "${CMAKE_CURRENT_SOURCE_DIR}/D3D12")
+    file(MAKE_DIRECTORY ${AGILITYSDK_TARGET_BIN_DIR})
+    add_custom_target(agilitysdk_copy
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${AGILITYSDK_BIN_DIR}
+        ${AGILITYSDK_TARGET_BIN_DIR}
+        COMMENT "Copying AgilitySDK DLLs from ${AGILITYSDK_BIN_DIR}"
+        VERBATIM)
+endif()
+
+#######################################################
 # Common files
 set(COMMON_SOURCES
 )
@@ -96,7 +108,8 @@ function(build_target TARGET_NAME SRCS MODULES)
     )
     if(WIN32)
         if (DIRECTX_BACKEND)
-            target_link_libraries(${TARGET_NAME} Xinput dinput8 dxguid dxgi d3d12 d3dcompiler)
+            add_dependencies(${TARGET_NAME} agilitysdk_copy)
+            target_link_libraries(${TARGET_NAME} agilitysdk agilitysdk_d3dx12 Xinput dinput8 dxguid dxgi d3d12 d3dcompiler)
         endif ()
         if(MINGW)
             target_link_options(${TARGET_NAME} PRIVATE "-mwindows")
