Add/remove nodes from scene

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,10 +109,12 @@ endfunction()
 #######################################################
 set(MY_TARGET_SRC
         ${SRC_DIR}/MyApp.cpp
+        ${SRC_DIR}/scenes/AddRemove.cpp
         ${SRC_DIR}/scenes/ViewAssets.cpp
         ${SRC_DIR}/scenes/BaseScene.cpp
         ${SRC_DIR}/scenes/TrianglesScene.cpp)
 set(MY_TARGET_MODULES
+        ${SRC_DIR}/scenes/AddRemove.ixx
         ${SRC_DIR}/scenes/ViewAssets.ixx
         ${SRC_DIR}/scenes/BaseScene.ixx
         ${SRC_DIR}/scenes/TrianglesScene.ixx)
