--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,6 +115,7 @@ set(MY_TARGET_SRC
         ${SRC_DIR}/scenes/BaseScene.cpp
         ${SRC_DIR}/scenes/Physics.cpp
         ${SRC_DIR}/scenes/TrianglesScene.cpp
+        ${SRC_DIR}/scenes/Vector.cpp
         ${SRC_DIR}/scenes/ViewAssets.cpp)
 set(MY_TARGET_MODULES
         ${SRC_DIR}/Layers.ixx
@@ -124,5 +125,6 @@ set(MY_TARGET_MODULES
         ${SRC_DIR}/scenes/BaseScene.ixx
         ${SRC_DIR}/scenes/Physics.ixx
         ${SRC_DIR}/scenes/TrianglesScene.ixx
+        ${SRC_DIR}/scenes/Vector.ixx
         ${SRC_DIR}/scenes/ViewAssets.ixx)
 build_target(myapp "${MY_TARGET_SRC}" "${MY_TARGET_MODULES}")
