Transfer responsibility to upload data to GPU to the resources

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ add_custom_target(shaders_copy
         COMMENT "Copying Lysa shaders"
         VERBATIM
 )
-add_dependencies(shaders_copy ${LYSA_TARGET} lysa_shaders)
+add_dependencies(shaders_copy ${LYSA_TARGET})
 
 #######################################################
 # Common files
@@ -90,11 +90,7 @@ function(build_target TARGET_NAME SRCS MODULES)
     compile_options(${TARGET_NAME})
     target_include_directories(${TARGET_NAME} PUBLIC ${INCLUDE_DIR} ${LYSA_INCLUDE_DIR} ${xxhash_SOURCE_DIR})
     target_link_libraries(${TARGET_NAME} ${LYSA_TARGET} std-cxx-modules xxhash)
-    add_dependencies(${TARGET_NAME} shaders_copy)
-#    target_precompile_headers(${TARGET_NAME} PRIVATE
-#            "<cstdint>"
-#            "<cstddef>"
-#    )
+    add_dependencies(${TARGET_NAME} shaders_copy shaders)
     if(WIN32)
         if (DIRECTX_BACKEND)
             target_link_libraries(${TARGET_NAME} Xinput dinput8 dxguid dxgi d3d12 d3dcompiler)
