--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ add_custom_target(shaders_copy
         COMMENT "Copying Lysa shaders"
         VERBATIM
 )
-add_dependencies(shaders_copy ${LYSA_TARGET})
+add_dependencies(shaders_copy ${LYSA_TARGET} lysa_shaders)
 
 #######################################################
 # Common files
