Adding OIT Transparency pass

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ function(build_target TARGET_NAME SRCS MODULES)
     compile_options(${TARGET_NAME})
     target_include_directories(${TARGET_NAME} PUBLIC ${INCLUDE_DIR} ${LYSA_INCLUDE_DIR} ${xxhash_SOURCE_DIR})
     target_link_libraries(${TARGET_NAME} ${LYSA_TARGET} std-cxx-modules xxhash)
-    add_dependencies(${TARGET_NAME} shaders_copy shaders)
+    add_dependencies(${TARGET_NAME} shaders_copy)
     if(WIN32)
         if (DIRECTX_BACKEND)
             target_link_libraries(${TARGET_NAME} Xinput dinput8 dxguid dxgi d3d12 d3dcompiler)
